@@ -3,6 +3,9 @@
 	* V05-05-37: Use gti diff TAG and git/info/sparse-checkout to find out
 	actual deleted packages.
 
+	* V05-05-38: Bug fix the code-checks yaml file fixer
+	https://github.com/cms-sw/cmssw/issues/20377
+
 2017-08-23 Shahzad Muzaffar  <Shahzad.Muzaffar@cern.ch>
 
 	* V05-05-35/36: Apply clang-tidy changes to changed files only if
